introdotta compilazione dinamica delle classi